<resources>
    <string name="app_name">TextureTaker</string>

    <string name="take_new_texture">Take New Texture</string>
    <string name="view_textures">View Textures</string>
    <string name="send_texture">Send Texture</string>
    <string name="save_texture">Save Texture</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_render">RenderActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_rajawali_example">RajawaliExampleActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_image_picker">ImagePickerActivity</string>

    <string name="cube">Cube</string>
    <string name="plane">Plane</string>
    <string name="sphere">Sphere</string>


</resources>
