<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/renderLayout">


    <Button
        android:layout_width="@dimen/small_button_width"
        android:layout_height="wrap_content"
        android:text="@string/cube"
        android:id="@+id/cubeButton"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/button_background"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textColor"
        style="@style/Theme.AppCompat"
        android:onClick="setCube" />

    <Button
        android:layout_width="@dimen/small_button_width"
        android:layout_height="wrap_content"
        android:text="@string/plane"
        android:id="@+id/planeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/button_background"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textColor"
        style="@style/Theme.AppCompat"
        android:onClick="setPlane" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sphere"
        android:id="@+id/sphereButton"
        android:layout_alignTop="@+id/cubeButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/button_background"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textColor"
        style="@style/Theme.AppCompat"
        android:onClick="setSphere" />


</RelativeLayout>
